--- a/css/main.css
+++ b/css/main.css
@@ -518,70 +518,9 @@ header {
 }
 
 /* Work Section ----------------------------------- */
-.work-items h2 {
-    font-family: "heading", "Helvectica Neue", serif;
-    line-height: 33px;
-    min-height: 50px;
-    font-size: 19px;
-    text-transform: capitalize;
-    letter-spacing: 0.4px;
-}
 
-body .work-items {
-    margin-top: 50px;
-    overflow: auto;
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    justify-content: space-between;
-}
-
-.work-items-section {
-    padding-bottom: 40px;
-    vertical-align: top;
-}
-
-@media (min-width: 750px) {
-    .work-items-section {
-        padding-left: 30px;
-    }
-    .work-items-section:first-child {
-        padding-left: 0;
-    }
-    .work-items-section:nth-child(3n) {
-        /*float: right;*/
-    }
-}
-
-.work-items-section ul li a {
-    display: block;
-    line-height: 24px;
-    padding-left: 50px;
-}
-
-.work-items-section ul li:first-child {
-    padding: 10px 0;
-}
-
-.work-items-section ul ul li:first-child {
-    padding-top: 5px;
-    padding-bottom: 0;
-}
-
-.work-items-section ul ul li {
-    line-height: 24px;
-}
-
-.work-items-section ul li a i {
-    background-image: none;
-    display: inline;
-    position: inherit;
-    margin: 0;
-    float: none;
-}
-
-.work-items .jcura::before {
-    /*Image of Jcura documentation here*/
+.work-container {
+    
 }
 
 /* Footer ----------------------------------- */
