--- a/css/main.css
+++ b/css/main.css
@@ -520,7 +520,20 @@ header {
 /* Work Section ----------------------------------- */
 
 .work-container {
-    
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
+.work-container img {
+    width: 100%;
+}
+
+.work-container p {
+    margin: 20px 0;
+}
+
+.work-container .row {
+    margin: 120px 0;
 }
 
 /* Footer ----------------------------------- */
