Add underline to hover

--- a/css/main.css
+++ b/css/main.css
@@ -543,6 +543,10 @@ header {
     margin: 60px 0;
 }
 
+.work-container .row a p:hover {
+    text-decoration: underline;
+}
+
 /* Footer ----------------------------------- */
 
 footer {
