--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,9 @@ i {
         max-width: none;
         padding: 13% 8px 4px 8px;
     }
+    p {
+        font-size: 16px;
+    }
 }
 
 @media (min-width: 750px) {
@@ -504,16 +507,24 @@ header {
     font-size: 14px;
     float: left;
     max-width: 600px;
-    margin: 80px auto 80px auto;
+    margin: 50px auto 50px auto;
     line-height: 40px;
     padding: 80px 30px 0 30px;
     display: block;
     width: 100%;
+    text-align: center;
+}
+
+footer .tldr {
+    padding: 20px 30px 0 30px;
+    margin: 0px auto 50px auto;
 }
 
 @media (min-width: 550px) {
     .tldr {
         font-size: 16px;
+        text-align: left;
+        margin: 80px auto 80px auto;
     }
 }
 
