--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,11 @@ a:hover {
 }
 @media (max-width: 400px) {
     .tldr {
+        padding: 0px 30px 0 30px;
+    }
+}
+@media (max-width: 400px) {
+    .tldr {
         font-size: 18px;
         line-height: 26px;
     }
