--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ a:hover {
     margin: 100px auto 70px auto;
     padding: 0px 20px 0 20px;
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .tldr {
         padding: 0px 30px 0 30px;
     }
@@ -93,6 +93,7 @@ a:hover {
     .tldr {
         font-size: 14px;
         line-height: 20px;
+        padding: 0px 20px 0 20px;
     }
 }
 
