--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ a:hover {
 
 .emoji {
     font-size: 30px;
+    user-select: none;
 }
 
 .ui-draggable {
@@ -55,6 +56,7 @@ a:hover {
 }
 
 .volume-button {
+    user-select: none;
     display: none;
 }
 
