--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,14 @@
 }
 
 html {
-    background-color: #fff;
+    background-color: #eee;
 }
 
 body {
     color: #000;
-    font-family: "Inconsolata", "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 500;
 }
 
 h1 {
@@ -44,6 +46,9 @@ a:hover {
 .emoji {
     font-size: 30px;
     user-select: none;
+    position: absolute;
+    right: 50%;
+    color: #000;
 }
 
 .ui-draggable {
@@ -62,6 +67,7 @@ a:hover {
 
 .volume-button {
     text-decoration: none;
+    color: purple;
 }
 
 .tldr-container {
@@ -71,11 +77,11 @@ a:hover {
 }
 
 .tldr {
-    max-width: 580px;
-    line-height: 28px;
-    font-size: 20px;
+    max-width: 500px;
+    line-height: 24px;
+    font-size: 16px;
     text-align: left;
-    margin: 100px auto 70px auto;
+    margin: 200px auto 70px auto;
     padding: 0px 20px 0 20px;
 }
 @media (max-width: 500px) {
@@ -137,7 +143,7 @@ footer li {
     .volume-button {
         display: inline;
         cursor: pointer;
-        font-size: 30px;
+        font-size: 16px;
     }
 }
 
