--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,10 @@ a:hover {
 @media (max-width: 500px) {
     .tldr {
         padding: 0px 30px 0 30px;
-        margin: 80px auto 70px auto;
+        margin: 20px auto 70px auto;
+    }
+    .emoji {
+        display: none;
     }
 }
 @media (max-width: 400px) {
