--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,8 @@ a:hover {
     animation: fadeIn 1.5s forwards;
     max-width: 1100px;
     margin: auto;
+    margin-top: 200px;
+    padding: 0 70px;
 }
 
 .tldr {
@@ -81,14 +83,9 @@ a:hover {
     line-height: 24px;
     font-size: 16px;
     text-align: left;
-    margin: 200px auto 70px auto;
-    padding: 0px 20px 0 20px;
+    margin-bottom: 20px;
 }
 @media (max-width: 500px) {
-    .tldr {
-        padding: 0px 30px 0 30px;
-        margin: 20px auto 70px auto;
-    }
     .emoji {
         display: none;
     }
